# CMake_example

./: CMakeLists.txt  README.md
CMake_Lesson1/: CMakeLists.txt
CMake_Lesson1/crypto_lib_src/Src/: kcapi-utils.c
CMake_Lesson2/: CMakeLists.txt
project_src/: main.c
